# JDRobot2017

./: CMakeLists.txt  Param.h  extrinsics.yml  intrinsics.yml  main.cpp  paramL.yaml  paramR.yaml
AprilTags/: AprilTags.cpp  AprilTags.h
AprilTagsClass/: AprilTagsClass.cpp  AprilTagsClass.h
CV/: CVCalib.cpp  CVClass.cpp  CVClass.h  paramL.yaml  paramR.yaml
CV/AprilTagsClass/: AprilTagsClass.h
Communicate/: Communication.cpp  Communication.h
Communicate/SocketClass/: SocketClass.cpp  SocketClass.h
Threads/: Threads.cpp  Threads.h
